# financial-data-analysis-pipeline

./: LICENSE  README.md  financial_pipeline.py  pyproject.toml
financial-data-analysis-pipeline/input_files/: sample_financial_data.csv
financial-data-analysis-pipeline/output/: all_records.csv  average_profit_margin_by_company.csv  financial_analysis.db  financial_data_with_kpis.csv  highest_profit_margin.csv  largest_total_assets.csv  revenue_by_company.csv  revenue_by_period.csv  sql_calculated_kpis.csv  strongest_liquidity.csv
