[project]
name = "financial-data-analysis-pipeline"
version = "0.1.0"
description = ""
authors = [
    {name = "Janelly Bautista",email = "janellybautista10@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pdfplumber>=0.11.5,<0.12.0",
    "openai>=1.59.6,<2.0.0",
    "pandas>=2.2.3,<3.0.0",
    "matplotlib>=3.10.0,<4.0.0",
    "llama-index>=0.12.11,<0.13.0",
    "jinja2 (>=3.1.5,<4.0.0)",
    "pylatex (>=1.4.2,<2.0.0)",
    "fpdf (>=1.7.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
